--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
+23.05:
+- Move to next.js
+
 Actual on 26.04:
-- Minimalistic graph showing #points, green-red plot line reflecting points changing
-- Refine game state after the first win (when the graph appears)
-- Change font
++ Minimalistic graph showing #points, green-red plot line reflecting points changing
++ Refine game state after the first win (when the graph appears)
++ Change font
